[gd_scene load_steps=7 format=2]

[ext_resource path="res://game/World.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/en/regular_big.tres" type="DynamicFont" id=2]
[ext_resource path="res://game/scenarios/YoungScenario.tscn" type="PackedScene" id=3]
[ext_resource path="res://game/scenarios/OldScenario.tscn" type="PackedScene" id=4]
[ext_resource path="res://game/player/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/fonts/en/regular_medium.tres" type="DynamicFont" id=6]

[node name="World" type="Node"]
script = ExtResource( 1 )

[node name="BackgroundLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="Background" type="ColorRect" parent="BackgroundLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[node name="OldScenario" parent="." instance=ExtResource( 4 )]

[node name="YoungScenario" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, 1080 )

[node name="Player" parent="." instance=ExtResource( 5 )]
position = Vector2( 888, 386 )
walk_speed = 200.0

[node name="Overlay" type="CanvasLayer" parent="."]

[node name="ScreenEffects" type="Control" parent="Overlay"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="HUD" type="Control" parent="Overlay"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Dialogue" type="Label" parent="Overlay/HUD"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 130.0
margin_top = -98.0
margin_right = -130.0
margin_bottom = -13.0
grow_horizontal = 2
grow_vertical = 0
custom_fonts/font = ExtResource( 6 )
text = "lorem ipsum"
align = 1
valign = 1

[node name="ChangeStateButton" type="Button" parent="Overlay/HUD"]
margin_right = 160.0
margin_bottom = 117.0
custom_fonts/font = ExtResource( 2 )
text = "Pills"

[connection signal="button_up" from="Overlay/HUD/ChangeStateButton" to="." method="_on_ChangeStateButton_button_up"]
